--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
-
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     //firebase ui dependencies
     implementation 'com.firebaseui:firebase-ui-firestore:4.3.1'
