Implemented HomeFragment item onClick, Revamped topic card, loading background image from internet using glide

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,13 @@ dependencies {
 
     //firebase dependencies
     implementation 'com.google.firebase:firebase-auth:16.2.0'
-    implementation 'com.google.firebase:firebase-messaging:17.4.0'
-    implementation 'com.google.firebase:firebase-firestore:18.1.0'
+    implementation 'com.google.firebase:firebase-messaging:17.5.0'
+    implementation 'com.google.firebase:firebase-firestore:18.2.0'
     implementation 'com.google.firebase:firebase-core:16.0.8'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
