--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
 
     //firebase ui dependencies
+    implementation 'com.firebaseui:firebase-ui-firestore:4.3.1'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
     //firebase dependencies
     implementation 'com.google.firebase:firebase-auth:16.2.0'
