--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
         classpath ('com.google.firebase:firebase-plugins:1.1.0') {
             exclude group: 'com.google.guava', module: 'guava-jdk5'
         }
+
+        classpath "io.realm:realm-gradle-plugin:5.10.0"
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
