--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.wang.avi:library:2.1.3'
+    implementation 'me.panavtec:drawableview:0.6.0'
 }
 apply plugin: 'com.google.gms.google-services'
