--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'me.panavtec:drawableview:0.6.0'
+    implementation 'com.pes.materialcolorpicker:library:1.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
