--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,7 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'me.panavtec:drawableview:0.6.0'
     implementation 'com.pes.materialcolorpicker:library:1.2.0'
+    //smilie rating
+    implementation 'com.github.sujithkanna:smileyrating:1.6.8'
 }
 apply plugin: 'com.google.gms.google-services'
