--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
         android:roundIcon="@drawable/shabd"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".Learn.Video.VideoActivity"
+            android:parentActivityName=".Learn.LearnActivity"/>
         <activity
             android:name=".Learn.ColorGame.ColorGameActivity"
             android:parentActivityName=".Learn.LearnActivity"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Learn.Quiz.QuizActivity"
             android:parentActivityName=".Learn.LearnActivity" />
