--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity
             android:name=".Learn.Quiz.QuizActivity"
             android:parentActivityName=".Learn.LearnActivity" />
+        <activity android:name=".Learn.Tic_Tac_Toe"
+            android:parentActivityName=".Learn.LearnActivity"/>
         <activity
             android:name=".Setting.LanguageSettingActivity"
             android:parentActivityName=".MainActivity" />
@@ -39,9 +41,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
         <activity
@@ -78,6 +82,7 @@
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
             </intent-filter>
         </activity>
 
