Made task data organised,removed bugs,update about app and language settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Learn.Video.VideoActivity"
             android:parentActivityName=".Learn.LearnActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="landscape"/>
+            android:configChanges="keyboardHidden|screenSize"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".Learn.ColorGame.ColorGameActivity"
             android:parentActivityName=".Learn.LearnActivity"
